--- a/1.html
+++ b/1.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">PYTHON</a></h1>
   <h2>목차<h2>
   <ol>
    <li><a href="1.html">개요</a></li>
@@ -16,5 +16,6 @@
   <p>Python을 다운하려면 <a href="https://www.python.org"target="_blank"title="orgarnization">파이썬</a>이 링크로 들어가서 다운로드하면 됩니다. docs에서 파이썬에서 사용되는 문법들을 설명해 주므로 참고하길 바랍니다.</p>
   <img src="coding.jpg"width="100%">
   위 사진은 파이썬의 코드들이 아닙니다.
+  <input type="checkbox">
 </body>
 </html>
