--- a/2.html
+++ b/2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">PYTHON</a></h1>
   <h2>목차<h2>
   <ol>
    <li><a href="1.html">개요</a></li>
